--- a/tests_www/index.html
+++ b/tests_www/index.html
@@ -8,14 +8,14 @@
 		<script type="text/javascript" src="./index.js"></script>
 	</head>
 	<body>
-		<audio src="/"></audio>
-		<img src="/img/hell.jpg"  class="prout" width="100" height="100"></img>
+		<audio src="./sounds/theme_song.mp3" type="audio/mpeg" autoplay></audio>
 		<div id="menu">
 			<div id="menu-items">
 				<a href="/" class="menu-item item1">Jeu</a>
 				<a href="/" class="menu-item item2">Profil</a>
 				<a href="/" class="menu-item item3">Chat</a>
 				<a href="/" class="menu-item item4">On est qui</a>
+				<a href="score.html" class="menu-item item5">Test Score</a>
 			</div>
 			<div id="menu-background-pattern"></div>
 		</div>
